<resources>
    <string name="app_name">NotesCL</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Note_Content">Note Content</string>
    <string name="note_title">Note Title</string>
    <string name="todo">NotesCL</string>
    <string name="notes">NOTES!</string>
    <string name="create_new_account">Create new account</string>
    <string name="forgotten_password">Forgotten Password?</string>
    <string name="login">LOGIN</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login2">LOGIN</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="email2">Email</string>
    <string name="confirm">CONFIRM</string>
    <string name="todoj">TODO</string>
    <string name="already_have_an_account_login">Already have an account?Login</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="passwords">Password</string>
    <string name="emailjj">Email</string>
    <string name="sign_up">SIGN UP</string>
    <string name="note_titlew3">Note Title</string>
    <string name="todo2">TODO</string>
    <string name="image">image</string>
    <string name="add_note">Add Note</string>
    <string name="note_content">Note Content...</string>
    <string name="edit_note">Edit Note</string>
    <string name="note_title1">Note Title</string>
    <string name="note_content2">Note Content...</string>
    <string name="editfab">editFab</string>
    <string name="by_n_developer_kunal">By\n Developer Kunal</string>
    <string name="life_is_too_short_don_t_forget_anything_just_n_note_it">Life is too short don\'t forget anything just\n Note it!</string>
    <string name="register">Register</string>
    <string name="date">Date</string>
    <string name="todo77">TODO</string>
</resources>