<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/oip"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Login">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="24dp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login2"
                android:gravity="center"
                android:textSize="36sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Email"
                android:background="@drawable/border"
                android:drawableStart="@drawable/baseline_person_24"
                android:drawablePadding="8dp"
                android:hint="@string/email"
                android:padding="8dp"
                android:layout_marginTop="20dp"
                android:textColor="@color/black"
                android:autofillHints=""
                android:inputType="textEmailAddress" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Password"
                android:background="@drawable/border"
                android:drawableStart="@drawable/baseline_lock_24"
                android:drawablePadding="8dp"
                android:hint="@string/password"
                android:padding="8dp"
                android:layout_marginTop="20dp"
                android:textColor="@color/black"
                android:autofillHints=""
                android:inputType="textPassword" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:id="@+id/Login_button"
                android:text="@string/login"
                android:backgroundTint="@color/lavendar"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/Forgot_Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/forgotten_password"
                android:textColor="@color/lavendar"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:layout_width="400dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/baseline_horizontal_rule_24"
                android:backgroundTint="@color/grey"
                android:autofillHints=""
                android:inputType="none" />


            <Button
                android:id="@+id/CreateAccount_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="#A4C6"
                android:text="@string/create_new_account"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                app:cornerRadius="2dp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>