<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="12dp"
        tools:context=".EditNoteFragment">

        <TextView
            android:id="@+id/editNoteHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins"
            android:text="@string/edit_note"
            android:textStyle="bold"
            android:textColor="@color/orange"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/updateNoteDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:background="@drawable/border"
            android:fontFamily="@font/poppins"
            android:hint="@string/date"
            android:padding="5dp"
            android:textColorHint="@color/grey"
            android:textSize="15sp"
            android:autofillHints=""
            android:inputType="datetime" />

        <EditText
            android:id="@+id/editNoteTitle"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/note_title1"
            android:textColorHint="@color/grey"
            android:padding="12dp"
            android:textSize="20sp"
            android:layout_below="@id/editNoteHeading"
            android:background="@drawable/border"
            android:layout_marginTop="46dp"
            android:maxLines="1"
            android:fontFamily="@font/poppins"
            android:autofillHints=""
            android:inputType="text" />

        <ImageView
            android:id="@+id/editNoteImg"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_below="@id/editNoteTitle"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_centerHorizontal="true"
            android:visibility="gone"
            android:contentDescription="@string/todo77" />

        <EditText
            android:id="@+id/editNoteDesc"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/note_content2"
            android:textColorHint="@color/grey"
            android:gravity="top"
            android:padding="12dp"
            android:textSize="18sp"
            android:fontFamily="@font/poppins"
            android:background="@drawable/border"
            android:layout_below="@id/editNoteImg"
            android:layout_marginTop="12dp"
            android:autofillHints=""
            android:inputType="textMultiLine" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editNoteFab"
            android:src="@drawable/baseline_done_24"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="20dp"/>


    </RelativeLayout>

</layout>