<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/oip"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ForgotPassword">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Forgot"
                android:text="@string/forgot_password"
                android:gravity="center"
                android:textSize="32sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Forgot_email"
                android:background="@drawable/border"
                android:layout_marginTop="30dp"
                android:hint="@string/email2"
                android:padding="8dp"
                android:drawableStart="@drawable/baseline_person_24"
                android:textColor="@color/black"
                android:autofillHints=""
                android:inputType="textEmailAddress" />

            <Button
                android:id="@+id/Confirm"
                android:layout_width="185dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/lavendar"
                android:text="@string/confirm"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:cornerRadius="2dp" />


        </LinearLayout>
        <ImageView
            android:id="@+id/imageButton"
            android:layout_width="59dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="140dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/lavendar"
            app:srcCompat="@drawable/baseline_arrow_back_24"
            android:contentDescription="@string/todoj" />

    </androidx.cardview.widget.CardView>


</LinearLayout>