<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".AddNoteFragment"
        android:padding="12dp">
        <TextView
            android:id="@+id/addNoteHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="16dp"
            android:text="@string/add_note"
            android:fontFamily="@font/poppins"
            android:textStyle="bold"
            android:textColor="@color/orange"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/addNoteDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:background="@drawable/border"
            android:fontFamily="@font/poppins"
            android:hint="@string/date"
            android:padding="5dp"
            android:textColorHint="@color/grey"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/addNoteTitle"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/note_titlew3"
            android:fontFamily="@font/poppins"
            android:textColorHint="@color/grey"
            android:padding="12dp"
            android:textSize="20sp"
            android:layout_below="@id/addNoteHeading"
            android:background="@drawable/border"
            android:layout_marginTop="46dp"
            android:maxLines="1"
            android:autofillHints=""
            android:inputType="text" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="170dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:id="@+id/imgNote"/>

        <com.yahiaangelo.markdownedittext.MarkdownEditText
            android:id="@+id/addNoteDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/note_content"
            android:fontFamily="@font/poppins"
            android:gravity="top"
            android:padding="12dp"
            android:textSize="18sp"
            android:background="@drawable/border"
            android:layout_below="@id/addNoteTitle"
            android:layout_marginTop="12dp"
            android:autofillHints=""
            android:inputType="textMultiLine" />
    </RelativeLayout>
    <com.yahiaangelo.markdownedittext.MarkdownStylesBar
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/styleBar"
        android:gravity="center|bottom"
        android:layout_marginStart="30dp"
        android:elevation="5dp"
        android:padding="0dp">

    </com.yahiaangelo.markdownedittext.MarkdownStylesBar>
    </LinearLayout>



</layout>